--- a/BatmanForeverTool/BatmanForeverTool.csproj
+++ b/BatmanForeverTool/BatmanForeverTool.csproj
@@ -38,13 +38,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BizHawk.Client.ApiHawk">
-      <HintPath>..\..\..\..\..\Downloads\BizHawk\dll\BizHawk.Client.ApiHawk.dll</HintPath>
+      <HintPath>..\lib\BizHawk.Client.ApiHawk.dll</HintPath>
     </Reference>
     <Reference Include="BizHawk.Client.Common">
-      <HintPath>..\..\..\..\..\Downloads\BizHawk\dll\BizHawk.Client.Common.dll</HintPath>
+      <HintPath>..\lib\BizHawk.Client.Common.dll</HintPath>
     </Reference>
     <Reference Include="BizHawk.Emulation.Common">
-      <HintPath>..\..\..\..\..\Downloads\BizHawk\dll\BizHawk.Emulation.Common.dll</HintPath>
+      <HintPath>..\lib\BizHawk.Emulation.Common.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
